tests/compile-fail/slice_instead_of_array.rs
use type_path::type_path;

const ITER_REPEAT_PATH: &[&str; 4] = type_path!(::std::iter::repeat);

fn main() {}
